src/test/test-models/bad/break3.stan
// tests correct value passed from model
transformed data {
}
model {
  int n;
  break;
}
